--- a/Todo List/website.css
+++ b/Todo List/website.css
@@ -10,7 +10,7 @@ body {
     rgb(20, 98, 170)
   );
   color: white;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   min-height: 100vh;
 }
 header {
@@ -58,7 +58,7 @@ form button:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  transition: all 1s ease;
+  transition: all 1.1s ease;
 }
 .todo li {
   flex: 1;
@@ -101,6 +101,6 @@ form button:hover {
   background: rgb(201, 253, 217);
 }
 .fall {
-  transform: translateY(8rem) rotateZ(10deg);
+  transform: translateY(12rem) rotateZ(10deg);
   opacity: 0;
 }
